= Changelog

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog] and this project follows the rules of 
http://semver.org/spec/v2.0.0.html[Semantic Versioning].


== 11.2.0 - TBD

=== Added

- `XmlBuilder.element(String, Optional<String>)`



== 11.1.1 - 2018-05-28

=== Fixed

- `XmlUtil.escape()` now escapes Unicode characters that are marked invalid for XML



== 11.1.0 - 2018-05-22

=== Added

- `RestClient` now supports a number of `upload()` methods



== 11.0.1 - 2018-05-17

=== Fixed

- XQuery objects now support inlining of external resources
- XQuery objects' `query` object is now translated to a string, even if it doesn't use namespaces


== 11.0.0 - 2018-05-07

=== Removed

- `com.opentext.ia.sdk.client.api.ArchiveClient.query()`
- `com.opentext.ia.yaml.configuration.ObjectConfiguration.canConfigureObject()`
- Default values for receiver node SIP formats (IA server 16EP5 and later have this built in)


=== Changed

- `com.opentext.ia.sdk.sip.ContentAssemblerDefault.getMetrics()` now returns a read-only object
- `com.opentext.ia.sdk.sip.ContentAssemblerDefault.getZip()` is now `protected` instead of `public`


== 10.1.0 - 2018-04-11

=== Added

- `ZipConfiguration` now accepts a `ZipCustomization` 



== 10.0.6 - 2018-04-09

=== Fixed

- Wrap all exceptions that indicate a YAML syntax error in `YamlSyntaxErrorException` 



== 10.0.5 - 2018-04-03

=== Fixed

- Fixed `ZipConfiguration` when using properties in `includes` 



== 10.0.4 - 2018-03-28

=== Fixed

- Fixed serialization of YAML 



== 10.0.3 - 2018-03-28

=== Fixed

- Fixed serialization of YAML 



== 10.0.2 - 2018-03-27

=== Fixed

- Fixed normalization of YAML configuration 



== 10.0.1 - 2018-03-27

=== Fixed

- Fix in `ZipConfiguration` when recursively including files outside the tree where the root YAML file lives



== 10.0.0 - 2018-03-26

=== Removed
